--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,11 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+/programacion_1/clases/abril_junio/variables_pulic/nbproject/private/
+/programacion_1/control2/chaparro_Gonzalez_2/nbproject/private/
+/programacion_1/control2/Chaparro_Gozalez_1/nbproject/private/
+/programacion_1/clase11_07_2015/ejemplo1/nbproject/private/
+/programacion_1/clase11_07_2015/ejemplo1/build/
+/programacion_1/clase11_07_2015/Solemne/nbproject/private/
+/programacion_1/solemne11julio2015/Miguel_Gonzalez/nbproject/private/
+/programacion_1/solemne11julio2015/Miguel_Gonzalez/build/
