--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,6 @@ Temporary Items
 /programacion_1/clase11_07_2015/Solemne/nbproject/private/
 /programacion_1/solemne11julio2015/Miguel_Gonzalez/nbproject/private/
 /programacion_1/solemne11julio2015/Miguel_Gonzalez/build/
+/ejercicios/JavaApplication1/nbproject/private/
+/ejercicios/mi ejercicio/nbproject/private/
+/ejercicios/mi ejercicio/build/
